@@ -17,6 +17,7 @@ Version 2.1 (Batasu) August-2021:
 	* Script Manager [0.1.24] - weeman and aircrack-ng fix [1]
 	* Script Manager [0.1.25] - aircrack-ng fix [1]
 	* Script Manager [0.1.26] - aircrack-ng fix [2]
+	* Script Manager [0.1.27] - nmap deployed for test
 	
 Version 2.0 (Batasu) July-2021:
 	* Separated script function from main script
